@@ -1,5 +1,6 @@
 FreeIPMI 1.2.9 - 06/26/13
 -------------------------
+o Fix threshold output corner case in ipmi-sensors.
 o Fix invalid declaration in libipmimonitoring header.
 
 FreeIPMI 1.2.8 - 06/21/13
